--- a/uasdm-ui/src/app/site/component/modal/collection-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/collection-modal.component.html
@@ -176,7 +176,7 @@
                 <tr *ngFor="let item of page.results">
                   <td>{{item.name}}</td>
                   <td style="text-align:right;">
-                    <artifact-upload *ngIf="item.name == 'geo.txt'" [componentId]="entity.id" [folder]="'raw'" [replaceName]="'geo.txt'">
+                    <artifact-upload *ngIf="item.name == 'geo.txt'" [componentId]="entity.id" [folder]="'raw'" [replaceName]="'geo.txt'" [label]="'Reupload'">
                     </artifact-upload>
                     <button type="button" class="btn btn-primary"
                       (click)="handleDownloadFile(item)" style="margin: 5px 0;">
