--- a/uasdm-ui/src/app/shared/component/loading-bar/loading-bar.component.html
+++ b/uasdm-ui/src/app/shared/component/loading-bar/loading-bar.component.html
@@ -3,6 +3,10 @@
 
 
 -->
-<div *ngIf="showIndicator" class="standby-overlay" style="height: 100%; width: 100%; z-index: 100;">
+<div *ngIf="showIndicator" class="standby-overlay" style="height: 100%; width: 100%;">
+    <div class="standby-div">
+        <i class="fa fa-spinner fa-spin fa-5x"></i>
+    </div>
+  </div>
+  
 
-</div>
