--- a/uasdm-ui/src/app/site/component/projects.component.html
+++ b/uasdm-ui/src/app/site/component/projects.component.html
@@ -10,7 +10,7 @@
     </span>
     <b>{{ match.item.label}} : {{ match.item.typeLabel}}</b>
   </ng-container>
-  
+
   <ng-container *ngIf="match.item.type == null || match.item.type !== 'LOCATION'">
     <span *ngIf="match.item.filename == null">
       <i class="fa fa-folder-open"></i>
@@ -50,106 +50,39 @@
           </div>
         </div>
 
-        <tabset #outerTabs class="nav-full-width">
-          <tab heading="Hierarchies">
-            <div class="row">
-              <div class="col-md-12">
-                <label>Hierarchy</label>
-                <select [(ngModel)]="sync" name="sync" (change)="refreshRoots()">
-                  <option></option>
-                  <option *ngFor="let sync of syncs" [value]="sync.oid">
-                    {{sync.displayLabel.localizedValue}}
-                  </option>
-                </select>
-              </div>
-            </div>
-            <div class="row" *ngIf="sync">
-              <div class="col-md-12">
-                <div id="hierarchy-tree-container"
-                  class="location-management-widget-section location-management-list-container"
-                  style="height: calc(-200px + 100vh);overflow-y: auto;overflow-x:hidden;">
+        <div class="row">
+          <div class="col-md-12">
 
-                  <div class="row" *ngIf="selected != null" style="margin-right: 10px;">
-                    <div class="col-md-12">
-                      <hr>
-
-                      <ul class="breadcrumb" style="background-color: white; vertical-align: middle; line-height:2">
-                        <li>
-                          <i class="fa fa-angle-left breadcrumb-back-ico" aria-hidden="true"></i>
-                          <a (click)="setLocation(null)" style="color: #007276;">Root</a>
-                        </li>
-                        <li *ngFor="let entity of locationBreadcrumbs; last as isLast" [ngClass]="{'active':isLast}">
-                          <a *ngIf="!isLast" (click)="setLocation(entity)" style="color: #007276;">
-                            {{entity.properties.displayLabel.localizedValue}}
-                          </a>
-                          <span *ngIf="isLast">
-                            <b>{{entity.properties.displayLabel.localizedValue}}</b>
-                          </span>
-                        </li>
-                      </ul>
-
-                      <h3>
-                        {{selected.object.properties.displayLabel.localizedValue}}
-                      </h3>
-
-                      <div class="form-group" *ngFor="let attribute of selected.metadata.attributes ">
-                        <label>
-                          {{attribute.label.localizedValue}}
-                        </label>
-                        <container-element [ngSwitch]="attribute.type">
-                          <input *ngSwitchCase="'local'" type="text" [name]="attribute.code"
-                            [(ngModel)]="selected.object.properties[attribute.code].localizedValue" disabled>
-                          <input *ngSwitchDefault type="text" [name]="attribute.code"
-                            [(ngModel)]="selected.object.properties[attribute.code]" disabled>
-                        </container-element>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="row" *ngIf="children.length > 0">
-                    <div class="col-md-12">
-                      <div *ngIf="selected != null">
-                        <label>
-                          Children
-                        </label>
-                      </div>
-                      <div class="list-group">
-                        <div *ngFor="let child of children; let i = index" [@fadeInOnEnter] class="list-group-item">
-                          <a [@fadeInOnEnter] (click)="handleHierarchyClick(child)">
-                            <h4 style="word-break: break-all;">{{child.properties.displayLabel.localizedValue}}</h4>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+            <!-- IF at Site level -->
+            <ng-container *ngIf="current == null || current.type === 1">
+              <div class="row">
+                <div class="col-md-6" style="height: 64px;">
+                  <h3 style="font-weight:bold;">IDM Sites</h3>
                 </div>
               </div>
-            </div>
-          </tab>
-          <tab heading="Sites">
-
-            <div class="row">
-              <div class="col-md-12">
-
-                <!-- IF at Site level -->
-                <ng-container *ngIf="!current">
-                  <div class="row">
-                    <div class="col-md-6" style="height: 64px;">
-                      <h3 style="font-weight:bold;">IDM Sites</h3>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-sm-12">
-                      <label>Bureau</label>
-                      <select [(ngModel)]="filter.value" name="filter" (change)="refreshSites()">
-                        <option></option>
-                        <option *ngFor="let bureau of bureaus" [value]="bureau.value">
-                          {{bureau.label}}
-                        </option>
-                      </select>
-                    </div>
-                  </div>
-                  <!--            
+              <div class="row">
+                <div class="col-md-12">
+                  <label>Hierarchy</label>
+                  <select [(ngModel)]="sync" name="sync" (change)="refreshRoots()">
+                    <option></option>
+                    <option *ngFor="let sync of syncs" [value]="sync.oid">
+                      {{sync.displayLabel.localizedValue}}
+                    </option>
+                  </select>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-12">
+                  <label>Filter Sites by Bureau</label>
+                  <select [(ngModel)]="filter.value" name="filter" (change)="refreshSites()">
+                    <option></option>
+                    <option *ngFor="let bureau of bureaus" [value]="bureau.value">
+                      {{bureau.label}}
+                    </option>
+                  </select>
+                </div>
+              </div>
+              <!--            
             <div class="row">
               <div class="col-sm-12">
                 <label>Sort</label>
@@ -161,38 +94,117 @@
               </div>
             </div>
           -->
-                </ng-container>
+            </ng-container>
 
 
-                <!-- IF lower than Site -->
-                <div class="row" *ngIf="current">
-                  <div class="col-md-12" style="height: 65px; overflow: auto;">
-                    <ul class="breadcrumb" style="background-color: white; vertical-align: middle; line-height:2">
-                      <li>
-                        <i class="fa fa-angle-left breadcrumb-back-ico" aria-hidden="true"></i>
-                        <a (click)="back(null)" style="color: #007276;">IDM Sites</a>
-                      </li>
-                      <li *ngFor="let entity of breadcrumbs; last as isLast" [ngClass]="{'active':isLast}">
-                        <a *ngIf="!isLast" (click)="back(entity)" style="color: #007276;"> {{entity.name}}</a>
-                        <span *ngIf="isLast"> <b>{{entity.name}}</b> </span>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-
+            <!-- IF lower than Site -->
+            <div class="row">
+              <div class="col-md-12" style="height: 65px; overflow: auto;">
+                <ul class="breadcrumb" style="background-color: white; vertical-align: middle; line-height:2">
+                  <li>
+                    <i class="fa fa-angle-left breadcrumb-back-ico" aria-hidden="true"></i>
+                    <a (click)="back(null)" style="color: #007276;">IDM Sites</a>
+                  </li>
+                  <li *ngFor="let breadcrumb of breadcrumbs; last as isLast" [ngClass]="{'active':isLast}">
+                    <ng-container *ngIf="breadcrumb.type === 0">
+                      <a *ngIf="!isLast" (click)="back(breadcrumb)" style="color: #007276;">
+                        {{breadcrumb.data.name}}</a>
+                      <span *ngIf="isLast"> <b>{{breadcrumb.data.name}}</b> </span>
+                    </ng-container>
+                    <ng-container *ngIf="breadcrumb.type === 1">
+                      <a *ngIf="!isLast" (click)="back(breadcrumb)" style="color: #007276;">
+                        {{breadcrumb.data.properties.displayLabel.localizedValue}}
+                      </a>
+                      <span *ngIf="isLast">
+                        <b> {{breadcrumb.data.properties.displayLabel.localizedValue}}</b>
+                      </span>
+                    </ng-container>
+                  </li>
+                </ul>
               </div>
             </div>
 
-            <!-- <hr> -->
+          </div>
+        </div>
 
-            <div class="row">
-              <div class="col-md-12" style="background:#f7f7f7; padding:0; height:100%;">
+        <!-- <hr> -->
 
-                <tabset #staticTabs class="nav-full-width">
-                  <tab heading="Data">
-                    <div id="hierarchy-tree-container"
-                      class="location-management-widget-section location-management-list-container"
-                      [style]="current != null ? 'height: calc(100vh - 340px);overflow-y: auto;overflow-x:hidden;' : 'height: calc(100vh - 400px);overflow-y: auto;overflow-x:hidden;'">
+        <div class="row">
+          <div class="col-md-12" style="background:#f7f7f7; padding:0; height:100%;">
+
+            <tabset #staticTabs class="nav-full-width">
+              <tab heading="Data">
+
+
+                <div id="hierarchy-tree-container"
+                  class="location-management-widget-section location-management-list-container"
+                  [style]="current != null ? 'height: calc(100vh - 340px);overflow-y: auto;overflow-x:hidden;' : 'height: calc(100vh - 400px);overflow-y: auto;overflow-x:hidden;'">
+
+
+                  <div class="row" *ngIf="sync && !showSites">
+                    <div class="col-md-12">
+                      <div class="row" *ngIf="current != null && current.type === 1" style="margin-right: 10px;">
+                        <div class="col-md-12">
+                          <hr>
+
+                          <h3>
+                            {{current.data.properties.displayLabel.localizedValue}}
+                          </h3>
+
+                          <div class="form-group" *ngFor="let attribute of current.metadata.attributes ">
+                            <label>
+                              {{attribute.label.localizedValue}}
+                            </label>
+                            <container-element [ngSwitch]="attribute.type">
+                              <input *ngSwitchCase="'local'" type="text" [name]="attribute.code"
+                                [(ngModel)]="current.data.properties[attribute.code].localizedValue" disabled>
+                              <input *ngSwitchDefault type="text" [name]="attribute.code"
+                                [(ngModel)]="current.data.properties[attribute.code]" disabled>
+                            </container-element>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="row" *ngIf="(current != null && current.type === 1)">
+                        <div class="col-md-12">
+                          <div class="col-md-12"
+                            style="text-align: center;padding: 10px;border-top: 1px solid lightgrey;">
+                            <button (click)="showSites = !showSites" class="btn btn-primary">Show Sites</button>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="row" *ngIf="(current == null || current.type === 1) && children.length > 0">
+                        <div class="col-md-12">
+                          <div>
+                            <label>
+                              Locations
+                            </label>
+                          </div>
+                          <div class="list-group">
+                            <div *ngFor="let child of children; let i = index" [@fadeInOnEnter] class="list-group-item">
+                              <a [@fadeInOnEnter] (click)="handleHierarchyClick(child)">
+                                <h4 style="word-break: break-all;">{{child.properties.displayLabel.localizedValue}}</h4>
+                              </a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="row" *ngIf="showSites">
+                    <div class="col-md-12">
+
+                      <div class="row" *ngIf="(current != null && current.type === 1)">
+                        <div class="col-md-12">
+                          <div class="col-md-12"
+                            style="text-align: center;padding: 10px;border-top: 1px solid lightgrey;">
+                            <button (click)="showSites = !showSites" class="btn btn-primary">Hide Sites</button>
+                          </div>
+                        </div>
+                      </div>
+
                       <div class="list-group">
 
                         <!-- If -->
@@ -306,8 +318,13 @@
                         </div>
 
                       </div>
+
                     </div>
-                    <!-- <div *ngIf="supportingData.length > 0" class="location-management-widget-section location-management-list-container">
+                  </div>
+
+
+                </div>
+                <!-- <div *ngIf="supportingData.length > 0" class="location-management-widget-section location-management-list-container">
                         
                             <div class="card card-default">
                               <div class="card-body">
@@ -323,35 +340,33 @@
                             </div>
                       </div> -->
 
-                  </tab>
-                  <tab *ngIf="current != null" heading="Products">
-                    <div id="hierarchy-tree-container"
-                      class="location-management-widget-section location-management-list-container"
-                      style="height: calc(100vh - 296px);overflow-y: auto;overflow-x:hidden;">
-                      <product-panel [id]="current.id" (toggleMapOrtho)="handleMapOrtho($event)"
-                        (toggleMapDem)="handleMapDem($event)"></product-panel>
-                    </div>
-                  </tab>
-                </tabset>
+              </tab>
+              <tab *ngIf="current != null && current.type === 0" heading="Products">
+                <div id="hierarchy-tree-container"
+                  class="location-management-widget-section location-management-list-container"
+                  style="height: calc(100vh - 296px);overflow-y: auto;overflow-x:hidden;">
+                  <product-panel [id]="current.data.id" (toggleMapOrtho)="handleMapOrtho($event)"
+                    (toggleMapDem)="handleMapDem($event)"></product-panel>
+                </div>
+              </tab>
+            </tabset>
 
-              </div>
+          </div>
+        </div>
+
+
+        <footer class="sidebar-footer">
+          <div class="row" *ngIf="current != null && current.type === 0" style="background:white;">
+            <div class="col-md-12" style="text-align: center;padding: 10px;border-top: 1px solid lightgrey;">
+              <button (click)="handleCreateCollection()" class="btn btn-primary">Create Collection</button>
             </div>
-
-
-            <footer class="sidebar-footer">
-              <div class="row" *ngIf="current != null" style="background:white;">
-                <div class="col-md-12" style="text-align: center;padding: 10px;border-top: 1px solid lightgrey;">
-                  <button (click)="handleCreateCollection()" class="btn btn-primary">Create Collection</button>
-                </div>
-              </div>
-              <div class="row" *ngIf="current == null" style="background:white;">
-                <div class="col-md-12" style="text-align: center;padding: 10px;border-top: 1px solid lightgrey;">
-                  <button (click)="handleCreate(null,null)" class="btn btn-primary">Add new site</button>
-                </div>
-              </div>
-            </footer>
-          </tab>
-        </tabset>
+          </div>
+          <div class="row" *ngIf="current == null || current.type === 1" style="background:white;">
+            <div class="col-md-12" style="text-align: center;padding: 10px;border-top: 1px solid lightgrey;">
+              <button (click)="handleCreate(null,null)" class="btn btn-primary">Add new site</button>
+            </div>
+          </div>
+        </footer>
       </ng-container>
       <ng-container *ngIf="viewMode === 1">
         <div id="hierarchy-tree-container" class="location-management-widget-section location-management-list-container"
